--- a/ymate-framework-core/pom.xml
+++ b/ymate-framework-core/pom.xml
@@ -37,6 +37,12 @@
         </dependency>
         <dependency>
             <groupId>net.ymate</groupId>
+            <artifactId>ymate-platform-log</artifactId>
+            <version>2.0-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.ymate</groupId>
             <artifactId>ymate-platform-plugin</artifactId>
             <version>2.0-SNAPSHOT</version>
             <scope>provided</scope>
