增加一个commons工程, 将通用的工具类等都集中放到这里

--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,9 @@
     <description>Framework Library based on YMP.</description>
 
     <modules>
-        <module>ymate-framework-core</module>
         <module>ymate-framework-addons</module>
+        <module>ymate-framework-commons</module>
+        <module>ymate-framework-core</module>
     </modules>
 
     <developers>
