--- a/ymate-framework-commons/pom.xml
+++ b/ymate-framework-commons/pom.xml
@@ -30,5 +30,11 @@
             <version>2.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.3.6</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
