--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.ymate</groupId>
+    <groupId>net.ymate.framework</groupId>
     <artifactId>ymate-framework-parent</artifactId>
     <version>2</version>
     <packaging>pom</packaging>
