--- a/ymate-framework-addons/pom.xml
+++ b/ymate-framework-addons/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>ymate-framework-parent</artifactId>
         <groupId>net.ymate.framework</groupId>
-        <version>2</version>
+        <version>1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -37,27 +37,27 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>net.ymate</groupId>
+            <groupId>net.ymate.framework</groupId>
             <artifactId>ymate-framework-core</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>net.ymate</groupId>
+            <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-configuration</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>net.ymate</groupId>
+            <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-plugin</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>net.ymate</groupId>
+            <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-webmvc</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>net.ymate</groupId>
+            <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-persistence</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
