--- a/ymate-framework-addons/pom.xml
+++ b/ymate-framework-addons/pom.xml
@@ -37,6 +37,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.22</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>net.ymate.framework</groupId>
             <artifactId>ymate-framework-core</artifactId>
             <version>2.0-SNAPSHOT</version>
