--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -15,6 +16,7 @@
         <module>ymate-framework-addons</module>
         <module>ymate-framework-commons</module>
         <module>ymate-framework-core</module>
+        <module>ymate-framework-unpack</module>
     </modules>
 
     <developers>
