--- a/ymate-framework-addons/pom.xml
+++ b/ymate-framework-addons/pom.xml
@@ -50,22 +50,22 @@
         <dependency>
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-configuration</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-plugin</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-webmvc</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-persistence</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
     </dependencies>
 </project>
