--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git@git.oschina.net:suninformation/ymate-framework-v2.git</connection>
-        <developerConnection>scm:git:git@git.oschina.net:suninformation/ymate-framework-v2.git</developerConnection>
-        <url>git@git.oschina.net:suninformation/ymate-framework-v2.git</url>
+        <connection>scm:git:git@github.com:suninformation/ymate-framework-v2.git</connection>
+        <developerConnection>scm:git:git@github.com:suninformation/ymate-framework-v2.git</developerConnection>
+        <url>git@github.com:suninformation/ymate-framework-v2.git</url>
     </scm>
 
     <properties>
