--- a/ymate-framework-addons/pom.xml
+++ b/ymate-framework-addons/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ymate-framework-addons</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
 
     <name>ymate-framework-addons</name>
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>net.ymate.framework</groupId>
             <artifactId>ymate-framework-core</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>net.ymate.platform</groupId>
