--- a/ymate-framework-commons/pom.xml
+++ b/ymate-framework-commons/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ymate-framework-commons</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
 
     <name>ymate-framework-commons</name>
