--- a/src/main/resources/META-INF/validation.properties
+++ b/src/main/resources/META-INF/validation.properties
@@ -4,3 +4,5 @@ ymp.validation.upload_file_content_type={0} content type must be match {1}.
 ymp.validation.upload_file_between={0} size must be between {1} and {2}.
 ymp.validation.upload_file_max={0} size must be lt {1}.
 ymp.validation.upload_file_min={0} size must be gt {1}.
+
+ymp.validation.mobile={0} not a valid mobile phone number.
