--- a/ymate-framework-unpack/pom.xml
+++ b/ymate-framework-unpack/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ymate-framework-unpack</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.3</version>
     <packaging>jar</packaging>
 
     <name>ymate-framework-unpack</name>
@@ -68,13 +68,6 @@
                     <skipTests>true</skipTests>
                 </configuration>
             </plugin>
-            <!--
-            <plugin>
-                <groupId>net.ymate.maven.plugins</groupId>
-                <artifactId>ymate-maven-plugin</artifactId>
-                <version>1.0-SNAPSHOT</version>
-            </plugin>
-            -->
         </plugins>
     </build>
 
@@ -87,7 +80,7 @@
         <dependency>
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-core</artifactId>
-            <version>2.0.2</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
