--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <ymate.platform.version>2.0.5</ymate.platform.version>
     </properties>
 
     <build>
