--- a/ymate-framework-core/pom.xml
+++ b/ymate-framework-core/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ymate-framework-core</artifactId>
-    <version>2.0.5</version>
+    <version>2.0.6</version>
     <packaging>jar</packaging>
 
     <name>ymate-framework-core</name>
@@ -37,19 +37,19 @@
         <dependency>
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-plugin</artifactId>
-            <version>${project.version}</version>
+            <version>${ymate.platform.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-webmvc</artifactId>
-            <version>${project.version}</version>
+            <version>${ymate.platform.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-persistence-jdbc</artifactId>
-            <version>${project.version}</version>
+            <version>${ymate.platform.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
