--- a/ymate-framework-unpack/pom.xml
+++ b/ymate-framework-unpack/pom.xml
@@ -8,7 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ymate-framework-unpack</artifactId>
-    <version>2.0.5</version>
+    <version>2.0.6</version>
     <packaging>jar</packaging>
 
     <name>ymate-framework-unpack</name>
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>net.ymate.platform</groupId>
             <artifactId>ymate-platform-core</artifactId>
-            <version>${project.version}</version>
+            <version>${ymate.platform.version}</version>
         </dependency>
     </dependencies>
 </project>
