--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,11 @@
                 <artifactId>core</artifactId>
                 <version>3.3.2</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>3.17</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
