优化资源配置

--- a/src/main/resources/META-INF/validation.properties
+++ b/src/main/resources/META-INF/validation.properties
@@ -8,3 +8,6 @@ ymp.validation.upload_file_min={0} size must be gt {1}.
 ymp.validation.mobile={0} not a valid mobile phone number.
 
 ymp.validation.rsa_data_invalid={0} is invalid.
+
+ymp.validation.data_time_range_max_days={0} has exceeded the max days.
+ymp.validation.data_time_range_invalid={0} invalid.
