--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,11 @@
                 <artifactId>poi-ooxml</artifactId>
                 <version>3.17</version>
             </dependency>
+            <dependency>
+                <groupId>org.jxls</groupId>
+                <artifactId>jxls</artifactId>
+                <version>2.4.7</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
