--- a/ymate-framework-commons/pom.xml
+++ b/ymate-framework-commons/pom.xml
@@ -46,5 +46,10 @@
             <artifactId>poi-ooxml</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jxls</groupId>
+            <artifactId>jxls</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
